<resources>
    <string name="app_name">Firebase</string>
    <string name="new_user">New User</string>
    <string name="email">Email</string>
    <string name="returning_user">Returning User</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="enter">Enter</string>
    <string name="jawandsingh_gmail_com">JawandSingh@gmail.com</string>
    <string name="pwd">password</string>
    <string name="get_text">Get Text</string>
    <string name="select_workspace">Select Workspace</string>
    <string name="copy_token_to_share">Copy Token to Share</string>
    <string name="copy_token">Copy Token</string>
    <string name="add">add</string>
</resources>